--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/RegisterMaintenance.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/RegisterMaintenance.fxml
@@ -1,18 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="cr.ac.una.taskprogramll.controller.RegisterMaintenanceController">
    <children>
-      <SplitPane dividerPositions="0.5" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <SplitPane dividerPositions="0.0" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <VBox layoutX="138.0" layoutY="82.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <Label fx:id="labLftHead" text="Registro/Mantenimiento" />
+                        <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" spacing="50.0" VBox.vgrow="ALWAYS">
+                           <children>
+                              <RadioButton fx:id="rbtnLftEquipment" mnemonicParsing="false" onAction="#OnActionRbtnLftEquipment" text="Equipo">
+                                 <toggleGroup>
+                                    <ToggleGroup fx:id="grpFiltro" />
+                                 </toggleGroup>
+                              </RadioButton>
+                              <RadioButton fx:id="rbtnLftSport" mnemonicParsing="false" onAction="#OnActionRbtnLftSport" text="Deporte" toggleGroup="$grpFiltro" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="50.0">
+                           <children>
+                              <VBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0" spacing="30.0" HBox.hgrow="ALWAYS">
+                                 <children>
+                                    <TextField fx:id="TxtLftName" promptText="Nombre" />
+                                    <ComboBox fx:id="cmbLftEquipment" onAction="#OnActionCmbLftEquipment" prefWidth="150.0" promptText="Equipo" />
+                                 </children>
+                              </VBox>
+                              <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0" spacing="5.0" HBox.hgrow="ALWAYS">
+                                 <children>
+                                    <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                                    <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" spacing="20.0" VBox.vgrow="ALWAYS">
+                                       <children>
+                                          <Button fx:id="btnLftImage" mnemonicParsing="false" onAction="#OnActionBtnLftImage" text="Seleccionar Imagen" />
+                                          <Button fx:id="btnLftPhoto" mnemonicParsing="false" onAction="#OnActionBtnLftPhoto" text="Tomar Foto" />
+                                       </children>
+                                    </HBox>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" spacing="70.0" VBox.vgrow="ALWAYS">
+                           <children>
+                              <Button fx:id="btnLftAccept" mnemonicParsing="false" onAction="#OnActionBtnLftAccept" text="Aceptar" />
+                              <Button fx:id="btnLftDelete" mnemonicParsing="false" onAction="#OnActionBtnLftDelete" text="Eliminar" />
+                              <Button fx:id="btnLftCancel" mnemonicParsing="false" onAction="#OnActionBtnLftCancel" text="Cancelar" />
+                           </children>
+                        </HBox>
+                     </children>
+                     <padding>
+                        <Insets bottom="40.0" left="40.0" right="40.0" top="40.0" />
+                     </padding>
+                  </VBox>
                </children>
             </AnchorPane>
         </items>
