--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/RegisterMaintenance.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/RegisterMaintenance.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="cr.ac.una.taskprogramll.controller.RegisterMaintenanceController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.RegisterMaintenanceController">
     <children>
       <SplitPane dividerPositions="0.0" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -25,7 +25,7 @@
                         <Label fx:id="labLftHead" text="Registro/Mantenimiento" />
                         <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" spacing="50.0" VBox.vgrow="ALWAYS">
                            <children>
-                              <RadioButton fx:id="rbtnLftEquipment" mnemonicParsing="false" onAction="#OnActionRbtnLftEquipment" text="Equipo">
+                              <RadioButton fx:id="rbtnLftTeam" mnemonicParsing="false" onAction="#OnActionRbtnLftTeam" text="Equipo">
                                  <toggleGroup>
                                     <ToggleGroup fx:id="grpFiltro" />
                                  </toggleGroup>
@@ -38,12 +38,12 @@
                               <VBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0" spacing="30.0" HBox.hgrow="ALWAYS">
                                  <children>
                                     <TextField fx:id="TxtLftName" promptText="Nombre" />
-                                    <ComboBox fx:id="cmbLftEquipment" onAction="#OnActionCmbLftEquipment" prefWidth="150.0" promptText="Equipo" />
+                                    <ComboBox fx:id="cmbLftTeam" onAction="#OnActionCmbLftTeam" prefWidth="150.0" promptText="Equipo" />
                                  </children>
                               </VBox>
                               <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0" spacing="5.0" HBox.hgrow="ALWAYS">
                                  <children>
-                                    <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                                    <ImageView fx:id="mgvImage" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
                                     <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" spacing="20.0" VBox.vgrow="ALWAYS">
                                        <children>
                                           <Button fx:id="btnLftImage" mnemonicParsing="false" onAction="#OnActionBtnLftImage" text="Seleccionar Imagen" />
