Modificacion de fileManeger y de resgitro
Filimaneger ya quedo terminado, por otro en registro ya se puede registrar los nombres  de los equipo, la parte de las imagen queda para luego que ya que tengo que ver como abro los archivos

--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/RegisterMaintenance.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/RegisterMaintenance.fxml
@@ -37,7 +37,7 @@
                            <children>
                               <VBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0" spacing="30.0" HBox.hgrow="ALWAYS">
                                  <children>
-                                    <TextField fx:id="TxtLftName" promptText="Nombre" />
+                                    <TextField fx:id="txtLftName" promptText="Nombre" />
                                     <ComboBox fx:id="cmbLftTeam" onAction="#OnActionCmbLftTeam" prefWidth="150.0" promptText="Equipo" />
                                  </children>
                               </VBox>
