--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/RegisterMaintenance.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/RegisterMaintenance.fxml
@@ -46,7 +46,7 @@
                                     <ImageView fx:id="mgvImage" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
                                     <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" spacing="20.0" VBox.vgrow="ALWAYS">
                                        <children>
-                                          <Button fx:id="btnLftImage" mnemonicParsing="false" onAction="#OnActionBtnLftImage" text="Seleccionar Imagen" />
+                                          <Button fx:id="btnLftSelectImage" mnemonicParsing="false" onAction="#OnActionBtnLftSelectImage" text="Seleccionar Imagen" />
                                           <Button fx:id="btnLftPhoto" mnemonicParsing="false" onAction="#OnActionBtnLftPhoto" text="Tomar Foto" />
                                        </children>
                                     </HBox>
