--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/CreateTourney.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/CreateTourney.fxml
@@ -37,9 +37,9 @@
                         <ComboBox prefWidth="150.0" promptText="Sport Type" />
                         <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" nodeOrientation="RIGHT_TO_LEFT" prefHeight="226.0" prefWidth="411.0" spacing="40.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <MFXTextField floatingText="Tourney Name" />
-                              <MFXTextField floatingText="Team Quantity" />
-                              <MFXTextField floatingText="Time per match" />
+                              <MFXTextField fx:id="txtTourneyName" floatingText="Tourney Name" onAction="#validateName" />
+                              <MFXTextField fx:id="txtTeamQuantity" floatingText="Team Quantity" onAction="#validateQuantity" />
+                              <MFXTextField fx:id="txtMatchTime" floatingText="Time per match" onAction="#validateTime" />
                            </children>
                            <HBox.margin>
                               <Insets />
@@ -55,8 +55,8 @@
                   </HBox>
                   <HBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" spacing="397.0" VBox.vgrow="ALWAYS">
                      <children>
-                        <Button mnemonicParsing="false" text="Cancel" />
-                        <Button alignment="TOP_LEFT" mnemonicParsing="false" style="-fx-background-color: yellow;" text="Start" />
+                        <Button fx:id="btnCancel" mnemonicParsing="false" text="Cancel" />
+                        <Button fx:id="btnStart" alignment="TOP_LEFT" mnemonicParsing="false" onAction="#createTourney" style="-fx-background-color: yellow;" text="Start" />
                      </children>
                      <opaqueInsets>
                         <Insets />
