fill sportType-ComboBox
the comboBox with the types of sports to select is filed, so its gonna have any single sport is created

--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/CreateTourney.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/CreateTourney.fxml
@@ -24,7 +24,7 @@
             </Text>
             <HBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
                <children>
-                  <ComboBox prefWidth="150.0" promptText="Sport Type" />
+                  <ComboBox fx:id="tglLstSportType" prefWidth="150.0" promptText="Sport Type" />
                   <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" nodeOrientation="RIGHT_TO_LEFT" prefHeight="226.0" prefWidth="411.0" spacing="40.0" HBox.hgrow="ALWAYS">
                      <children>
                         <MFXTextField fx:id="txtTourneyName" floatingText="Tourney Name" onAction="#validateName" />
