--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Photography.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Photography.fxml
@@ -9,68 +9,72 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="cr.ac.una.taskprogramll.controller.PhotographyController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.PhotographyController">
    <children>
-      <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="200.0">
+      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="380.0" spacing="15.0" HBox.hgrow="ALWAYS">
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="260.0" prefWidth="320.0" styleClass="jfx-panelfondo" VBox.vgrow="ALWAYS">
+                  <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="380.0" spacing="15.0" HBox.hgrow="ALWAYS">
                      <children>
-                        <ImageView fx:id="imvCamera" fitHeight="240.0" fitWidth="288.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                        <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="260.0" prefWidth="320.0" styleClass="jfx-panelfondo" VBox.vgrow="ALWAYS">
+                           <children>
+                              <ImageView fx:id="imvCamera" fitHeight="240.0" fitWidth="288.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                           </children>
+                           <padding>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </padding>
+                        </HBox>
+                        <MFXButton fx:id="bntTakePhoto" onAction="#onActionBntTakePhoto" prefHeight="34.0" prefWidth="125.0" text="TOMAR FOTO">
+                           <graphic>
+                              <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" />
+                           </graphic>
+                           <styleClass>
+                              <String fx:value="btnTakePhoto" />
+                              <String fx:value="jfx-btnTakePhoto-" />
+                           </styleClass>
+                        </MFXButton>
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" left="15.0" right="15.0" top="10.0" />
+                     </padding>
+                  </VBox>
+                  <Separator orientation="VERTICAL" prefHeight="200.0" styleClass="jfx-panelfondo" />
+                  <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="277.0" spacing="15.0" HBox.hgrow="ALWAYS">
+                     <children>
+                        <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="215.0" prefWidth="230.0" styleClass="jfx-panelfondo">
+                           <children>
+                              <ImageView fx:id="imvPhotography" fitHeight="192.0" fitWidth="205.0" pickOnBounds="true" preserveRatio="true">
+                                 <HBox.margin>
+                                    <Insets bottom="8.0" left="10.0" right="10.0" top="8.0" />
+                                 </HBox.margin>
+                              </ImageView>
+                           </children>
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </HBox>
+                        <MFXButton fx:id="btnSavePhoto" onAction="#onActionBtnSavePhoto" text="GUARDAR FOTO">
+                           <graphic>
+                              <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" />
+                           </graphic>
+                           <styleClass>
+                              <String fx:value="jfx-btnTakePhoto-" />
+                              <String fx:value="btnTakePhoto" />
+                           </styleClass>
+                        </MFXButton>
                      </children>
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
-                  </HBox>
-                  <MFXButton fx:id="bntTakePhoto" onAction="#onActionBntTakePhoto" prefHeight="34.0" prefWidth="125.0" text="TOMAR FOTO">
-                     <graphic>
-                        <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" />
-                     </graphic>
-                     <styleClass>
-                        <String fx:value="btnTakePhoto" />
-                        <String fx:value="jfx-btnTakePhoto-" />
-                     </styleClass>
-                  </MFXButton>
-               </children>
-               <padding>
-                  <Insets bottom="10.0" left="15.0" right="15.0" top="10.0" />
-               </padding>
-            </VBox>
-            <Separator orientation="VERTICAL" prefHeight="200.0" styleClass="jfx-panelfondo" />
-            <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="277.0" spacing="15.0" HBox.hgrow="ALWAYS">
-               <children>
-                  <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="215.0" prefWidth="230.0" styleClass="jfx-panelfondo">
-                     <children>
-                        <ImageView fx:id="imvPhotography" fitHeight="192.0" fitWidth="205.0" pickOnBounds="true" preserveRatio="true">
-                           <HBox.margin>
-                              <Insets bottom="8.0" left="10.0" right="10.0" top="8.0" />
-                           </HBox.margin>
-                        </ImageView>
-                     </children>
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin>
-                  </HBox>
-                  <MFXButton fx:id="btnSavePhoto" onAction="#onActionBtnSavePhoto" text="GUARDAR FOTO">
-                     <graphic>
-                        <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" />
-                     </graphic>
-                     <styleClass>
-                        <String fx:value="jfx-btnTakePhoto-" />
-                        <String fx:value="btnTakePhoto" />
-                     </styleClass>
-                  </MFXButton>
+                  </VBox>
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
-            </VBox>
+            </HBox>
+            <MFXButton fx:id="btnCancel" onAction="#OnActionBtnCancel" text="Cancelar" />
          </children>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-      </HBox>
+      </VBox>
    </children>
 </AnchorPane>
