--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/CreateTourney.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/CreateTourney.fxml
@@ -27,9 +27,9 @@
                   <ComboBox fx:id="tglLstSportType" prefWidth="150.0" promptText="Sport Type" />
                   <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" nodeOrientation="RIGHT_TO_LEFT" prefHeight="226.0" prefWidth="411.0" spacing="40.0" HBox.hgrow="ALWAYS">
                      <children>
-                        <MFXTextField fx:id="txtTourneyName" floatingText="Tourney Name" onAction="#validateName" />
-                        <MFXTextField fx:id="txtTeamQuantity" floatingText="Team Quantity" onAction="#validateQuantity" />
-                        <MFXTextField fx:id="txtMatchTime" floatingText="Time per match" onAction="#validateTime" />
+                        <MFXTextField fx:id="txtTourneyName" floatingText="Tourney Name" />
+                        <MFXTextField fx:id="txtTeamQuantity" floatingText="Team Quantity" />
+                        <MFXTextField fx:id="txtMatchTime" floatingText="Time per match" />
                      </children>
                      <HBox.margin>
                         <Insets />
