--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/CreateTourney.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/CreateTourney.fxml
@@ -1,68 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import io.github.palexdev.materialfx.controls.MFXSlider?>
 <?import io.github.palexdev.materialfx.controls.MFXTextField?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.CreateTourneyController">
+<AnchorPane id="AnchorPane" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.CreateTourneyController">
    <children>
-      <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Create Tourney" textAlignment="CENTER" wrappingWidth="354.005859375">
+      <VBox alignment="CENTER" spacing="20.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+         <!-- Título -->
+         <Text text="Create Tourney" textAlignment="CENTER">
+            <font>
+               <Font name="Arial" size="24.0" />
+            </font>
+         </Text>
+
+         <!-- Inputs Principales -->
+         <VBox alignment="CENTER" spacing="15.0">
+            <MFXTextField fx:id="txtTourneyName" floatingText="Tourney Name" prefWidth="300.0" />
+            <MFXTextField fx:id="txtMatchTime" floatingText="Time per Match (Minutes)" prefWidth="300.0" />
+            <ComboBox fx:id="tglLstSportType" prefWidth="300.0" promptText="Sport Type" />
+         </VBox>
+
+         <!-- Slider para Cantidad de Equipos -->
+<VBox alignment="CENTER" spacing="10.0">
+    <Text text="Cantidad de Equipos" />
+    <HBox alignment="CENTER" spacing="10.0">
+        <MFXSlider fx:id="teamQuantitySlider" prefWidth="300.0" />
+    </HBox>
+</VBox>
+
+
+         <!-- Sección de Equipos -->
+         <VBox alignment="CENTER" spacing="15.0">
+            <Text text="Teams Management">
                <font>
-                  <Font name="Arial" size="27.0" />
-               </font>
-               <VBox.margin>
-                  <Insets bottom="20.0" />
-               </VBox.margin>
-            </Text>
-            <HBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
-               <children>
-                  <ComboBox fx:id="tglLstSportType" prefWidth="150.0" promptText="Sport Type" />
-                  <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" nodeOrientation="RIGHT_TO_LEFT" prefHeight="226.0" prefWidth="411.0" spacing="40.0" HBox.hgrow="ALWAYS">
-                     <children>
-                        <MFXTextField fx:id="txtTourneyName" floatingText="Tourney Name" />
-                        <MFXTextField fx:id="txtTeamQuantity" floatingText="Team Quantity" />
-                        <MFXTextField fx:id="txtMatchTime" floatingText="Time per match" />
-                     </children>
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </VBox>
-               </children>
-               <VBox.margin>
-                  <Insets left="30.0" right="30.0" />
-               </VBox.margin>
+                  <Font name="Arial" size="12.0" />
+               </font></Text>
+            <HBox alignment="CENTER" spacing="10.0">
+               <Button fx:id="btnAddTeam" prefWidth="80.0" text="Add" />
+               <MFXTextField fx:id="txtTeamName" floatingText="Team Name" prefWidth="200.0" />
             </HBox>
-            <HBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
-               <children>
-                  <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS" />
-                  <Button fx:id="btnCancel" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Cancel" />
-                  <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS" />
-                  <Button fx:id="btnStart" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#createTourney" text="Start" />
-                  <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                  </VBox>
-               </children>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <padding>
-                  <Insets top="50.0" />
-               </padding>
+            <HBox alignment="CENTER" spacing="10.0">
+               <Button fx:id="btnDeleteTeam" prefWidth="80.0" text="Delete" />
+               <MFXTextField fx:id="txtDeleteTeamName" floatingText="Team to Delete" prefWidth="200.0" />
             </HBox>
-         </children>
+            <Button fx:id="btnAddRandomTeam" prefWidth="120.0" text="Add Random" />
+            <TableView fx:id="tblTeams" prefHeight="150.0" prefWidth="400.0">
+               <columns>
+                  <TableColumn prefWidth="400.0" text="Team Name" />
+               </columns>
+            </TableView>
+         </VBox>
+
+         <!-- Botones Inferiores -->
+         <HBox alignment="CENTER" spacing="20.0">
+            <Button fx:id="btnCancel" prefWidth="100.0" text="Cancel" />
+            <Button fx:id="btnStart" onAction="#createTourney" prefWidth="100.0" text="Start" />
+         </HBox>
       </VBox>
    </children>
 </AnchorPane>
