--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/RegisterMaintenance.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/RegisterMaintenance.fxml
@@ -32,7 +32,7 @@
                   <VBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0" spacing="30.0" HBox.hgrow="ALWAYS">
                      <children>
                         <MFXTextField fx:id="txtName" floatMode="BORDER" floatingText="Nombre" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS" />
-                        <MFXComboBox fx:id="cmbTeam" maxWidth="1.7976931348623157E308" onAction="#OnActionCmbTeam" VBox.vgrow="ALWAYS" />
+                        <MFXComboBox fx:id="cmbSport" maxWidth="1.7976931348623157E308" onAction="#OnActionCmbSport" VBox.vgrow="ALWAYS" />
                      </children>
                   </VBox>
                   <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0" spacing="10.0" HBox.hgrow="ALWAYS">
