--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/RegisterModify.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/RegisterModify.fxml
@@ -13,9 +13,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="StoreBackground" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.RegisterModifyController">
+<AnchorPane id="AnchorPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="StoreBackground" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.RegisterModifyController">
     <children>
-      <VBox alignment="CENTER" layoutX="-6.0" spacing="40.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox alignment="CENTER" layoutX="-6.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="40.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label fx:id="labHead" text="Registro/Mantenimiento">
                <VBox.margin>
@@ -33,7 +33,7 @@
                         <Insets />
                      </HBox.margin>
                   </VBox>
-                  <Separator maxWidth="-Infinity" orientation="VERTICAL" prefWidth="10.0" HBox.hgrow="NEVER" />
+                  <Separator orientation="VERTICAL" />
                   <VBox alignment="CENTER" layoutX="128.0" layoutY="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="25.0" HBox.hgrow="ALWAYS">
                      <children>
                         <VBox fx:id="hbxImage" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="boxRose" stylesheets="@Style.css" VBox.vgrow="ALWAYS">
@@ -48,7 +48,7 @@
                               <Insets />
                            </VBox.margin>
                         </VBox>
-                        <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" spacing="20.0" VBox.vgrow="ALWAYS">
+                        <HBox alignment="CENTER" maxWidth="1.7976931348623157E308" spacing="20.0" VBox.vgrow="ALWAYS">
                            <children>
                               <MFXButton fx:id="btnSelectImage" onAction="#OnActionBtnSelectImage" text="Seleccionar" HBox.hgrow="ALWAYS" />
                               <MFXButton fx:id="btnPhoto" onAction="#OnActionBtnPhoto" text="Tomar Foto" HBox.hgrow="ALWAYS" />
