--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/RegisterModify.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/RegisterModify.fxml
@@ -7,7 +7,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -15,9 +14,9 @@
 
 <AnchorPane id="AnchorPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="StoreBackground" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.RegisterModifyController">
     <children>
-      <VBox alignment="CENTER" layoutX="-6.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="40.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox alignment="CENTER" layoutX="-6.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="40.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0">
          <children>
-            <Label fx:id="labHead" text="Registro/Mantenimiento">
+            <Label fx:id="labTitle" text="Registro/Mantenimiento">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
@@ -38,11 +37,7 @@
                      <children>
                         <VBox fx:id="hbxImage" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="boxRose" stylesheets="@Style.css" VBox.vgrow="ALWAYS">
                            <children>
-                              <ImageView fx:id="mgvImage" fitHeight="200.0" fitWidth="230.0" pickOnBounds="true" VBox.vgrow="ALWAYS">
-                                 <image>
-                                    <Image url="@../resources/stadiumStands.jpg" />
-                                 </image>
-                              </ImageView>
+                              <ImageView fx:id="mgvImage" pickOnBounds="true" VBox.vgrow="ALWAYS" />
                            </children>
                            <VBox.margin>
                               <Insets />
